# menu_app

./: .env.template  Dockerfile.fastapi  README.md  alembic.ini  docker-compose.yml  pyproject.toml
src/: exceptions.py  server.py  settings.py
src/api/: __init__.py  dependencies.py
src/api/v1/: __init__.py  dishes.py  menus.py  submenus.py
src/db/migrations/: env.py
src/db/migrations/versions/: 2023_07_25_2227-72535e9db010-create_tables.py
src/db/repositories/: crud.py
src/db/tables/: __init__.py  base.py  dish.py  menu.py  submenu.py
src/dto/: dish.py  menu.py  submenu.py
