[tool.poetry]
name = "menu app"
version = "0.1.0"
description = ""
authors = ["Vladislav Novikov <mb1te.comics@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
sqlalchemy = "^2.0.19"
uvicorn = "^0.23.1"
pydantic-settings = "^2.0.2"
alembic = "^1.11.1"
asyncpg = "^0.28.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.7.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
